2012-10-18  Kent Tamura  <tkent@chromium.org>

        Add shortMonthLabels and shortStandAloneMonthLabels to Localizer
        https://bugs.webkit.org/show_bug.cgi?id=99787

        Reviewed by Kentaro Hara.

        * tests/LocaleMacTest.cpp:
        (LocaleMacTest::shortMonthLabel): A helper.
        (LocaleMacTest::shortStandAloneMonthLabel): Ditto.
        (TEST_F): Added tests for some locales.
        * tests/LocaleWinTest.cpp:
        (LocaleWinTest::shortMonthLabel): A helper.
        (TEST_F): Added tests for some locales. We don't test
        LocaleWin::shortStandAloneMonthLabels because it is identical to
        shortMonthLabels.
        * tests/LocalizedDateICUTest.cpp:
        (LocalizedDateICUTest::shortMonthLabel): A helper.
        (LocalizedDateICUTest::shortStandAloneMonthLabel): Ditto.
        (TEST_F): Added tests for some locales.

2012-10-18  Jochen Eisinger  <jochen@chromium.org>

        [chromium] Add a webkit_test_support target that WebTestingSupport
        https://bugs.webkit.org/show_bug.cgi?id=99772

        Reviewed by Adam Barth.

        Before, embedders would need to compile the WebTestingSupport.cpp
        themselves, which in turn depends on WebCore headers.

        * WebKit.gyp:

2012-10-18  W. James MacLean  <wjmaclean@chromium.org>

        [chromium] Re-enable gesture highlight layout tests, fix GestureLongPress regression.
        https://bugs.webkit.org/show_bug.cgi?id=99632

        Reviewed by James Robinson.

        Re-enable layout tests for gesture highlights. Includes fix for GestureTapCancel test.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleGestureEvent):

2012-10-18  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r131810.
        http://trac.webkit.org/changeset/131810
        https://bugs.webkit.org/show_bug.cgi?id=99762

        Broke linux debug webkit_unit_tests (Requested by
        danakj|gardening on #webkit).

        * WebKit.gypi: